--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 GEMINI_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=
-GEMINI_KEY=AIzaSyBPvaUBMguNn8tZBLsUDc2EzvgrgI8daMA
+GEMINI_KEY="Write your API key"
