--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=email-auto-reply
 
 
 gemini.api.url=${GEMINI_URL:https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=}
-gemini.api.key=${GEMINI_KEY:AIzaSyBPvaUBMguNn8tZBLsUDc2EzvgrgI8daMA}
+gemini.api.key=${GEMINI_KEY:"Write your API key"}
